<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/outline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tv_title_ingresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ingresa_cuenta"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cuenta_correo_telefono"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tv_title_ingresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableEnd="@drawable/outline_help_outline_24">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:errorEnabled="true"
        app:passwordToggleEnabled = "true"
        app:layout_constraintTop_toBottomOf="@id/til_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_olvide_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvide_contraseña"
        android:textColor="@color/azul"
        style="@style/Widget.Material3.Button.TextButton"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Iniciar_sesion"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:backgroundTint="@color/azul"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_olvide_contraseña"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_olvide_contraseña"
         />

    <TextView
        android:id="@+id/tv_info_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_olvide_contraseña"
        tools:text="No podemos acceder al servidor, Couldn't reach server, check your internet connection."/>

        <TextView
            android:id="@+id/tv_crear_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>